--- a/inst/templates/config.xml
+++ b/inst/templates/config.xml
@@ -63,9 +63,14 @@ PACKAGE=$(grep &apos;Package:&apos; DESCRIPTION | awk &apos;{print $NF}&apos;)
 echo &quot;PACKAGE NAME: $PACKAGE&quot;
 echo &quot;GIT_BRANCH: $GIT_BRANCH&quot;
 if [ &quot;$GIT_BRANCH&quot; = &quot;origin/master&quot; ]; then
+if git log -n1 | grep &quot;flushcache&quot;; then
+echo &quot;Flushing the cache!&quot;
+docker volume rm ${BASENAME}_cache
+fi
 ENABLE_CACHE=&quot;--env R_LIBS_USER=/cache -v ${BASENAME}_cache:/cache&quot;
 ENABLE_STORE=&quot;-v data:/data&quot;
 fi
+docker pull ropensci/docs
 ID=$(docker create --rm $ENABLE_CACHE $ENABLE_STORE ropensci/docs build &quot;/$BASENAME&quot;)
 docker cp $PWD &quot;$ID:/$BASENAME&quot;
 docker start $ID --attach
